# tutorialRust

./: .gitignore  external.md  internal.md
ch01_01_hello_world/: Cargo.toml
ch02_01_guessing_game/src/: main.rs
ch02_programming_a_guessing_game/ch02_01_guessing_game/: Cargo.toml
ch03_01_data_types/src/: main.rs
ch03_01_tipos_dato/: Cargo.toml
ch03_02_funciones/: Cargo.toml
ch03_03_control_flow/: Cargo.toml
ch03_03_control_flow/src/: main.rs
ch03_03_control_flujo/: Cargo.toml
ch03_common_programming_concepts/ch03_01_data_types/: Cargo.toml
ch03_common_programming_concepts/ch03_02_functions/: Cargo.toml
ch04_01_ownership/src/: main.rs
ch04_02_references/: Cargo.toml
ch04_02_referencias/: Cargo.toml
ch04_02_referencias/src/: main.rs
ch04_03_slice/src/: main.rs
ch04_understanding_ownership/ch04_01_ownership/: Cargo.toml
ch04_understanding_ownership/ch04_03_slice/: Cargo.toml
ch05_01_structs/src/: main.rs
ch05_using_structs_to_structure_related_data/ch05_01_structs/: Cargo.toml
ch06_01_enums/: Cargo.toml
ch07_02_restaurant/: Cargo.toml
ch07_02_restaurant/src/: lib.rs
ch07_03_use/: Cargo.toml
ch14_crates_and_crates_io/: readme.md
ch14_crates_and_crates_io/my_crate/: Cargo.toml
ch14_crates_and_crates_io/my_crate/src/: lib.rs
ch14_crates_and_crates_io/workspace/adder/: Cargo.toml
ch14_crates_and_crates_io/workspace/adder/src/: main.rs
t01_hello_world/: Cargo.toml
t02_guessing_game/: Cargo.toml
t03_tipos_dato/: Cargo.toml
t04_funciones/: Cargo.toml
t05_control_flujo/: Cargo.toml
t06_ownership/: Cargo.toml
(+72 files in other folders)
