[package]
name = "my_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# opt-level: nivel de optimización

[profile.dev]
opt-level = 0   # Nivel mínimo. Compilación rápida, ejecución lenta

[profile.release]
opt-level = 3   # Nivel máximo. Compilación lenta, ejecución rápida
