[package]
name = "adder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Cargo no asume que las dependencias del workspace dependandan de ellas mismas, por ello se hace la relación
[dependencies]
add-one = { path = "../add-one" }
rand = "0.8.3"